# dejavu

./: .gitignore  CHECKLIST.md  FEATURES.md  QUICK_START.md  README.md  SECURITY.md  api.md  doc.md  flow.md  index.html  mma_check.json  nba_output.json  package-lock.json  package.json  pnpm-lock.yaml  sprint.md  tsconfig.base.json  turbo.json  vercel.json  verification_counts.txt  verification_counts_2.txt  vite.config.ts
apps/api/: README.md  backend.txt  frontend.txt  nba_debug.json  nba_markets.json  package.json  render.yaml  sports_debug.txt  sports_debug_2.txt  test-sports-api.js  test-sports-api.ts
apps/web/: README.md  index.html  netlify.toml  package.json  tsconfig.json  vite.config.ts
apps/www/: package.json  tsconfig.json
contracts/evm/: README.md  foundry.toml  package.json
contracts/solana/: Anchor.toml  package.json
contracts/solana/programs/dejavu/: Cargo.toml
contracts/solana/programs/exoduze/: Cargo.toml
contracts/solana/programs/exoduze/src/: lib.rs
contracts/sui/: Move.toml  package.json
documentation/: AI-Recommendations-System.md  API-Integration.md  Admin-Features.md  Asset-Management.md  Doc.md  Email-Verification-System.md  Frontend-Architecture.md  Frontend-Configuration.md  Google-OAuth-Integration.md  Guidelines.md  Image-Scraping-ETL.md  Market-System-Architecture.md  RabbitMQ-Integration.md  Real-Time-Data-Architecture.md  Security-Architecture.md  Sports-System.md  Wallet-Authentication-System.md  Withdrawal-System.md
infra/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
src/app/: App.tsx
(+207 files in other folders)
