[package]
name = "dejavu"
version = "0.1.0"
description = "DeJaVu Prediction Market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dejavu"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

[dev-dependencies]
